# linesight

./: .gitignore  LICENSE  README.md  TODO.txt  conda_requirements.txt  pixi.toml  pyproject.toml  pytorch_requirements.txt  requirements.txt  requirements_conda.txt  requirements_pip.txt  setup.py  test.py
.github/: funding.yml
TMloader/: config.yaml
config_files/: config.py  inputs_list.py  misc.py  state_normalization.py  user_config.py
data/: digits_file.npy
docs/source/: conf.py  contributions.rst  dev_faq.rst  documentation.rst  empty_page.rst  first_training.rst  index.rst  installation.rst  main_objects.rst  project_structure.rst  reading_list.rst  second_training.rst  troubleshooting.rst  user_faq.rst  wall_text.rst
maps/: ESL-Hockolicious_0.5m_cl2.npy  map5_0.5m_cl.npy
scripts/: debug.py  debug_train.py  extract_video_or_inputs.py  gbx_to_vcp.py  launch_game.sh  launch_game_agade.sh  launch_game_pb.sh  observe_manual_run_to_extract_checkpoints.py  temp.py  train.py  train2.py
scripts/test_tminterface/: 1.py  2.py  3.py  4_with_dxcam.py  4_with_inputs.py  5_rollout.py  6_test_memory_use.py  dxcam_test.py  print_values.py  (+2 more)
trackmania_rl/: analysis_metrics.py  buffer_management.py  buffer_utilities.py  contact_materials.py  geometry.py  map_loader.py  map_reference_times.py  misc.py  nn_management.py  nn_utilities.py  noisy_linear.py  prioritized_experience_replay.py  reward_shaping.py  rollout.py  run_to_video.py  temporary_crap.py  time_parsing.py  tm_interface_manager.py  tminterface2.py  utilities.py
trackmania_rl.egg-info/: PKG-INFO  SOURCES.txt
(+119 files in other folders)
